[profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"
# lto = true
# panic = "abort"

[package]
name = "prefstore"
version = "0.2.0"
edition = "2021"
author = ["visnk"]
description = "A rust crate to Easily store and retrieve preferences in rust."
license = "MIT"
homepage = "https://github.com/visnkmr/prefstore"
repository = "https://github.com/visnkmr/prefstore"
keywords = ["settings", "preferences", "config", "options"]
categories = ["config"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"