[profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"
# lto = true
# panic = "abort"

# [lib]
# crate-type = ["dylib"]

[package]
name = "prefstore"
version = "0.4.0"
edition = "2021"
author = ["visnkmr"]
description = "A rust crate to Easily store and retrieve preferences in rust."
license = "MIT"
homepage = "https://github.com/visnkmr/prefstore"
repository = "https://github.com/visnkmr/prefstore"
keywords = ["settings", "preferences", "config", "options"]
categories = ["config"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
url="2.3.1"
serde_json="1.0.94"
glob="0.3.1"