

# cargo-features = ["strip"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"


[package]
name = "ps_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefstore = { path = "../prefstore" }
chrono = "0.4.23"
# iron = ">=0.5, <0.7"
# params = "0.8.0"
# execute = "0.2.11"


# abserde = "0.4.1"
# httparse = "1.8.0"
# # gluesql = "0.12"
# dirs = "4.0.0"
# # toml = "0.5.9"
# # futures = "0.3"
# indexmap = { version = "1.9.1", features = ["serde"] }
# serde = {version = "1.0.140", features = ["derive"]}
# serde_json="1.0"
# bookmarkt="0.0.3"
# local-ip-address = "0.4.7"
# fltk = "^1.3"
# fltk-anchor = "0.1"
# clap = "3.2.21"
# # tokio={ version = "1.20.1", features = ["full"] }
# glob="0.3.1"
# debug_print = "1.0.0"