

# cargo-features = ["strip"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"


[package]
name = "ps_example"
version = "0.1.0"
edition = "2021"
author = ["visnk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prefstore = { path = "../prefstore" }